Bug 1118141 - Update Audio buffers when receiving INFO_OUTPUT_BUFFERS_CHANGED. r=edwin.